# health-streaming-mcp

./: .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini
docs/: EXAMPLES.md  IOS_HTTPS_SETUP.md
flink_consumer/: README.md  __init__.py  main.py
flink_consumer/aggregations/: __init__.py  aggregator.py  calendar_aggregator.py  calendar_windows.py  metrics.py  pipeline.py  sink.py  validator.py  windows.py
flink_consumer/config/: __init__.py  flink-conf.yaml  log4j2.properties  recovery.py  settings.py
flink_consumer/converters/: avro_deserializer.py  health_data_transformer.py
gateway/: README.md  run_integration_tests.sh
gateway/certs/: cert.pem  (+1 more)
gateway/flink_consumer/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
gateway/flink_consumer/aggregations/: calendar_aggregator.py  metadata.py  pipeline.py  schemas.py  watermark.py
gateway/flink_consumer/config/: checkpoint.py  config.py  logging.py  prometheus.py
gateway/flink_consumer/converters/: __init__.py  health_data_transformer.py  schema_evolution.py
gateway/flink_consumer/docs/: CALENDAR_AGGREGATIONS.md  EXACTLY_ONCE.md  MONITORING_METRICS.md  OPERATIONS_GUIDE.md  QUICK_START_SINK.md  SCHEMA_EVOLUTION.md  TASK_10_SUMMARY.md  TASK_4_SUMMARY.md  TASK_6_SUMMARY.md  TIMEZONE_IMPLEMENTATION.md
gateway/flink_consumer/examples/: test_iceberg_setup.py  test_kafka_source.py  test_monitoring_metrics.py  test_schema_evolution.py  test_transformation_pipeline.py
gateway/flink_consumer/iceberg/: schema_evolution.py  schemas.py
gateway/flink_consumer/k8s/: README.md  configmap.yaml  namespace.yaml  secrets.yaml
gateway/flink_consumer/services/: error_handler.py  kafka_source.py
gateway/flink_consumer/tests/: README.md  __init__.py  test_health_data_transformer.py  test_health_data_validator.py  test_settings.py  test_timestamp_utils.py
gateway/flink_consumer/tests/integration/: __init__.py  test_transformation_pipeline.py
gateway/flink_consumer/tests/performance/: __init__.py  test_load_generator.py  test_throughput.py
gateway/flink_consumer/utils/: kafka_utils.py
gateway/flink_consumer/validators/: __init__.py
gateway/health_data_mcp/: __init__.py  exceptions.py  logging_config.py  pyproject.toml  pytest.ini  test_validation.py
gateway/health_data_mcp/services/: __init__.py
gateway/health_data_mcp/tests/: test_config.py  test_integration.py  test_query_service.py
health_data_mcp/: README.md  config.py  main.py
kafka/: README.md
scripts/: run_e2e_tests.sh
(+61 files in other folders)
