[project]
name = "strong-kafka"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apache-flink>=2.1.1",
    "confluent-kafka>=2.12.2",
    "fastapi>=0.121.2",
    "fastavro>=1.12.1",
    "httpx>=0.28.1",
    "prometheus-client>=0.23.1",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "python-json-logger>=4.0.0",
    "slowapi>=0.1.9",
]
