[project]
name = "health-data-mcp"
version = "0.1.0"
description = "MCP server for querying health data aggregations from Iceberg tables"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.2.0",
    "pyiceberg>=0.7.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
